--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
     "simplebar-react": "^3.2.4",
+    "sweetalert2": "^11.10.5",
     "yup": "1.3.2"
   },
   "devDependencies": {
